[tool.poetry]
name = "autoencoder-image-generator"
version = "0.1.0"
description = ""
authors = ["Giuseppe <giuseppe.fur96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.11.0"
torchvision = "0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

